﻿drkns 14.09.2014 10:47:27 +0200 - build 4104

1. Уточнение 4100.

drkns 14.09.2014 02:11:01 +0200 - build 4103

1. Уточнение 4101.

zg 14.09.2014 01:46:47 +0200 - build 4102

1. уточнение 4100: повторный вызов DialogRun.

2. при переоткрытии файла в редакторе, из менеджера окон удалялось окно, которое не было предварительно туда добавлено.

drkns 14.09.2014 00:44:51 +0200 - build 4101

1. Уточнение 4100.

drkns 13.09.2014 22:50:49 +0200 - build 4100

1. При неудачном переключении из редактора в просмотр не освобождалась память.
   Добавлять очередной костыль бессмысленно, поэтому логика владения окнами переделана.
   Теперь нет окон на стеке, окон, удаляемых менеджером, ручного задавания способа удаления,
   ручной проверки успешности создания, ручного удаления при неудачах и прочего цирка.
   Каждое окно - это умный указатель и живёт столько, сколько нужно.
   Возможны причудливые баги, как обычно.

drkns 12.09.2014 00:57:26 +0200 - build 4099

1. 1. Добавлена поддержка атрибутов FILE_ATTRIBUTE_INTEGRITY_STREAM и FILE_ATTRIBUTE_NO_SCRUB_DATA.

zg 11.09.2014 00:27:32 +0200 - build 4098

1. ViewerControl при указании реального ViewerID не работал для QuickView и Info панелей.

2. уточнение в работе VCTL_REDRAW и ECTL_REDRAW.

drkns 11.09.2014 00:07:10 +0200 - build 4097

1. Все предоставляемые плагинам функции помечены как noexcept и обернуты в try/catch,
   т. к. выбрасывание наружу исключений всё равно ни к чему хорошему привести не может.

2. Пара мелочей там же.

drkns 09.09.2014 21:16:03 +0200 - build 4096

1. Уточнение 4096.

drkns 09.09.2014 18:04:46 +0200 - build 4095

1. Уточнение 4072.1.

zg 09.09.2014 00:56:39 +0200 - build 4094

1. исправлены проблемы раскраски редактора, если левая координата отлична от нуля.

zg 08.09.2014 19:55:01 +0200 - build 4093

1. уточнение 4090.

2. убрана двойная проверка на модальность.

zg 08.09.2014 15:12:38 +0200 - build 4092

1. с форума: В редакторе после нажатия F6 не приходит EE_CLOSE.

2. уточнение 4091 для часов.
