@@ -1,4 +1,8 @@
-﻿drkns 14.09.2014 10:47:27 +0200 - build 4104
+﻿drkns 14.09.2014 14:42:05 +0200 - build 4105
+
+1. Рефакторинг.
+
+drkns 14.09.2014 10:47:27 +0200 - build 4104
 
 1. Уточнение 4100.
 
